# beesbot_render_test

./: URL.txt  app.py  chromaDB.py  main.py  pyproject.toml  requirements.txt
chroma_url_db/: chroma.sqlite3
